<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="gachon.mp.livre_bottom_navigation.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="gachon.mp.livre_bottom_navigation.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_writing"
        android:name="gachon.mp.livre_bottom_navigation.ui.writing.WritingFragment"
        android:label="@string/title_writing"
        tools:layout="@layout/fragment_writing" />


    <fragment
        android:id="@+id/navigation_mypage"
        android:name="gachon.mp.livre_bottom_navigation.ui.mypage.MypageFragment"
        android:label="@string/title_mypage"
        tools:layout="@layout/fragment_mypage" />


    <fragment
        android:id="@+id/navigation_more"
        android:name="gachon.mp.livre_bottom_navigation.ui.more.MoreFragment"
        android:label="@string/title_more"
        tools:layout="@layout/fragment_more" />
</navigation>