<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:text="회원탈퇴"
        android:textSize="20sp"
        android:textColor="@color/themeColor"
        android:layout_gravity="center_horizontal"
        android:gravity="center"/>
    <LinearLayout
        android:layout_height="70dp"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="200dp">
        <ImageView
            android:layout_width="20dp"
            android:layout_height="19dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="20dp"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            android:contentDescription="@string/btn_password"
            android:scaleType="fitCenter"
            android:src="@drawable/btn_password" />
        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="270dp"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:backgroundTint="#97b843"
            android:textColor="#97b843"
            android:textCursorDrawable="@null"
            android:inputType="textPassword"
            android:textColorHint="#97b843"
            android:hint="@string/password"/>
    </LinearLayout>
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btn_continue"
            android:layout_width="310dp"
            android:layout_height="60dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="70dp"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            android:contentDescription="@string/btn_continue"
            android:scaleType="fitCenter"
            android:src="@drawable/btn_continue"
            android:layout_marginStart="50dp" />
    </LinearLayout>
</LinearLayout>